fix: fix POST of /api/devices, fix upload image middleware
