# backend-api/docs/openapiSpec.json
@@ -217,7 +217,7 @@
                       "example": "success"
                     },
                     "data": {
-                        "$ref": "#/components/schemas/Unit"
+                      "$ref": "#/components/schemas/Unit"
                     }
                   }
                 }
@@ -247,7 +247,7 @@
         },
         "requestBody": {
           "required": true,
-          "content": {           
+          "content": {
             "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/InsertUnit"
@@ -274,17 +274,17 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/FailResponse"
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "data": {
+                      "type": "object",
+                      "example": null
+                    }
+                  }
                 }
               }
             }
@@ -301,26 +301,6 @@
           },
           "404": {
             "description": "Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
             "content": {
               "application/json": {
                 "schema": {
@@ -351,17 +331,24 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/FailResponse"
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "devices": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/Device"
+                          }
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -438,12 +425,21 @@
       "post": {
         "summary": "POST /api/devices",
         "responses": {
-          "200": {
+          "201": {
             "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SuccessResponse"
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string",
+                      "example": "success"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Device"
+                    }
+                  }
                 }
               }
             }
@@ -467,34 +463,14 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
           }
         },
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
-                "type": "object"
+                "$ref": "#/components/schemas/InsertDevice"
               }
             }
           }
@@ -1420,6 +1396,41 @@
             "format": "uri",
             "example": "/public/uploads/device.png",
             "description": "Device image URL"
+          }
+        }
+      },
+      "InsertDevice": {
+        "type": "object",
+        "properties": {
+          "unit_id": {
+            "type": "integer",
+            "example": "123"
+          },
+          "device_name": {
+            "type": "string",
+            "example": "Device Name"
+          },
+          "device_buy_date": {
+            "type": "string",
+            "format": "date",
+            "example": "2023-01-01",
+            "description": "Device buy date"
+          },
+          "device_maintenance_interval": {
+            "type": "integer",
+            "example": 30,
+            "description": "Device maintenance interval in days"
+          },
+          "device_img": {
+            "type": "string",
+            "format": "uri",
+            "example": "/public/uploads/device.png",
+            "description": "Device image URL"
+          },
+          "imgFile": {
+            "type": "string",
+            "format": "binary",
+            "description": "Device image file"
           }
         }
       },
