# backend-api/src/schemas/device.schema.js
@@ -5,7 +5,7 @@ const deviceSchema = z.object({
   unit_id: z.coerce.number().int().nonnegative().optional(),
   device_name: z.string().max(255),
   device_buy_date: z.coerce.date().optional(),
-  device_maintenance_interval: z.number().int().nonnegative(),
+  device_maintenance_interval: z.coerce.number().int().nonnegative(),
   device_img: z.string().max(255).optional(),
   //imgFile is optional and can be undefined or null, not included in database entity
   imgFile: z
